# compliance-at-scale-tpu

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
01_setup/: README.md  install_from_source.sh  provision_tpu.sh  verify_install.py
02_offline_batch/: README.md  batch_rai_eval.py
03_online_server/: README.md  client_concurrent.py  client_single.py  start_server.sh
04_integration_demo/: README.md  integration_demo.py
notebooks/: tutorial_colab.ipynb
sample_data/: expected_output_sample.json  llm_outputs.jsonl
tests/: test_pure_functions.py
